--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class = "row">
         <div class = "medium-offset-2 medium-8 columns">
             <h2>Megaroster</h2>
-            <form>
+            <form id = "studentForm">
+
                 <div>
                     <input type = "text"
                             name = "student"
@@ -27,7 +28,11 @@
                 </div>
             </form>
         </div>
+    </div class="row" >
+        <div class= "medium-8 medium-offset-2 columns"
+            id = student
     </div>
+</div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
