added remove function to remove a student from the roster

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <div class = "medium-offset-2 medium-8 columns">
                 <h2>Megaroster</h2>
                 <form id = "studentForm">
-
                     <div class = "small- columns"
                         <input type = "text"
                                 name = "student"
@@ -26,6 +25,8 @@
                     </div>
                 </form>
             </div>
+        </div>
+
         <div class="row" >
             <div class= "medium-8 medium-offset-2 columns">
                 <ul class="no-bullet" id = "studentList"></ul>
