--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class = "row">
             <div class = "medium-offset-2 medium-8 columns">
                 <h2>Megaroster</h2>
+                <iframe src="http://giphy.com/embed/vajVNMRP92BNK" width="480" height="269" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="http://giphy.com/gifs/catvidfest-yawn-vajVNMRP92BNK">via GIPHY</a></p>
                 <form id = "studentForm">
                     <div class = "small- columns"
                         <input type = "text"
